--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,62 +1,49 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="PCP Quality Assurance Protocol : Scripts and documentation for the PCP&#39;s protocol for assessing data quality." />
+    <head>
+        <meta charset='utf-8' />
+        <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+        <meta name="description" content="Preprocessed Connectomes Project" />
+        <link rel="stylesheet" href="stylesheets/bib-publication-list.css"/>
+        <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+        <script src="javascripts/menu_script.js"></script>
+        <title>PCP Quality Assessment Protocol</title>
+    </head>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <body>
+      
+        <div id="container">
 
-    <title>{{ page.title }}</title>
-  </head>
+        <!-- HEADER -->
+            <header>
+                <!--<a id="forkme_banner" href="https://github.com/ccraddock/abide_preproc">View on GitHub</a>-->
 
-  <body>
+                <h1 id="project_title">PCP Quality Assessment Protocol</h1><br>
+  		        <div id='cssmenu'>
+  		            <ul>
+  		                <li><a href='index.html'>Overview</a></li>
+                        <li class='active'><a href='publications.html'>Publications</a></li>
+                        <li class='active'><a href='https://groups.google.com/d/forum/pcp_forum' target="_blank">Forum</a></li>
+                        <li class='active'><a href='https://preprocessed-connectomes-project.github.io' target="_blank">PCP</a></li>
+  		                <li class='active'><a href='https://github.com/preprocessed-connectomes-project/quality-assessment-protocol' target="_blank">View on Github</a></li>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/preprocessed-connectomes-project/quality-assessment-protocol">View on GitHub</a>
-
-          <h1 id="project_title">{{ page.title }}</h1>
-          <h2 id="project_tagline">Scripts and documentation for the PCP&#39;s protocol for assessing data quality.</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/preprocessed-connectomes-project/quality-assessment-protocol/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/preprocessed-connectomes-project/quality-assessment-protocol/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <div class="toc"></div>
-        
-        {{ content }}
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">PCP Quality Assurance Protocol maintained by <a href="https://github.com/preprocessed-connectomes-project">preprocessed-connectomes-project</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+  		            </ul>
+  		        </div>
+            </header>
+            
+                <div id="main_content_wrap" class="outer">
+                    <section id="main_content" class="inner">
+                        {{ content }}
+                    </section>
+                </div>
+                    
+            <!-- FOOTER  -->
+            <footer class="inner">
+                <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+            </footer>
     
-
-  </body>
-  
-  <!--
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" ></script>
-  <script src="javascripts/toc.js" ></script>  
-  <script type="text/javascript">
-    $(document).ready(function() {
-        $('.toc').toc();
-    });
-  </script>
-  -->
-  
+        </div>  
+    </body>
 </html>
