--- a/docs/stylesheets/bib-publication-list.css
+++ b/docs/stylesheets/bib-publication-list.css
@@ -15,12 +15,12 @@ span.undefined { color:red; }
 .techreport { background-color: #b77; }
 .legend .pub { width: 10px; height: 10px; display: inline-block; margin: 0 5px 0 15px;}
 .legend { margin-bottom: 20px; text-align: center; width: 100%;}
-table.display thead th { 
-    padding: 3px 18px 3px 10px; 
-    border-bottom: 1px solid black; 
-    border-top: 1px solid black; 
-    font-weight: bold; c
-    cursor: pointer; 
+table.display thead th {
+    padding: 3px 18px 3px 10px;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    font-weight: bold;
+    cursor: pointer;
     cursor: hand;
     background: #eee; }
 table.display tfoot th { padding: 3px 10px; border-top: 1px solid black; font-weight: bold; }
